--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,14 @@ body::-webkit-scrollbar-thumb {
   position: fixed;
   top: 0;
   position: relative;
-  /*border-bottom: 1px solid #ccc;*/
+  border-bottom: 1px solid #ccc;
+  background-color: black;
+  color: wheat;
+}
+.main .header .bell {
+  font-size: 24px;
+  position: absolute;
+  top: 6px; left: 16px;
 }
 .main .header .logo_box {
   width: 70px; height: 40px;
@@ -62,8 +69,6 @@ body::-webkit-scrollbar-thumb {
   text-align: center;
   line-height: 40px;
   font-size: 24px;
-  background-color: black;
-  color: wheat;
 }
 
 .main_sheet {
@@ -77,11 +82,9 @@ body::-webkit-scrollbar-thumb {
   box-sizing: border-box;
   margin: 0 auto;
   margin-top: 20px;
- 
 }
 .screen_box .main .visual_box div{
   width: 100%; height: 100%;
-  text-align: center;
   line-height: 280px;
   position: relative;
 }
@@ -89,11 +92,13 @@ body::-webkit-scrollbar-thumb {
   opacity: 0.7;
 }
 .screen_box .main .visual_box div .txt {
-  width: 100%; height: 40px;
-  font-size: 20px;
+  width: 94%; height: 80px;
+  font-size: 16px;
+  text-indent: 8px;
   background-color: rgba(255, 255, 255, 0.6);
   position: absolute;
-  top: 220px; left: 0;
+  top: 190px; left: 50%;
+  transform: translateX(-50%);
   line-height: 40px;
 }
 /*----------category_box-----------*/
@@ -254,7 +259,6 @@ body::-webkit-scrollbar-thumb {
   font-size: 24px;
   position: absolute;
   top: 4px; right: 10px;
-  background-color: #ccc;
   text-align: center;
   line-height: 40px;
 }
@@ -379,14 +383,14 @@ body::-webkit-scrollbar-thumb {
   bottom: 0;
   display: flex;
   border-top: 1px solid #ccc;
-  background-color: white;
+  background-color: black;
 }
-
 .footer li {
-  width: 20%;
+  width: 25%;
   text-align: center;
   font-size: 28px;
   line-height: 50px;
+  color: wheat;
 }
 
 /*--------lnb---------*/
